roles/ingress/files/ingress.yml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi5-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /404
        pathType: Prefix
        backend:
          service:
            name: not-found-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service # service name
            port:
              number: 80
